# tradingbot

./: .dockerignore  .env.template  .gitignore  CLAUDE.md  DEPLOYMENT.md  DOCKGE_DEPLOYMENT.md  DOCKGE_QUICK_START.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  LICENSE  Makefile  PER_STRATEGY_STOP_LOSS_FIX_SUMMARY.md  QUICK_START.md  README.md  REPOSITORY_CLEANUP_SUMMARY.md  SECURITY.md  SECURITY_IMPROVEMENTS.md  STRATEGY_SWITCHING_GUIDE.md  TESTING_GUIDE.md  brokers.py  config.json  docker-compose.yml  dockge-compose.yml  equity_report.py  healthcheck.py  install.sh  pyproject.toml  reconcile.py  requirements.txt  run_bot.py  runner.py  setup.py  strategy.py  strategy_research_summary.md  tradingbot.service
.github/workflows/: docker-publish.yml
data/: paper_state.json.enc
docs/: deploy-sop.md
models/: regime_hmm.pkl  regime_hmm_states.json  signal_filter_obv_breakout.pkl  signal_filter_rsi_momentum_pullback.pkl  signal_filter_vwap_band_bounce.pkl
research/: Comprehensive_Research_Summary.md  Day1_Signal_Validation_Report.md  Market_Coverage_Analysis.md  Research_Completeness_Assessment.md  adaptive_strategy_test.py  adaptive_strategy_validation.py  advanced_indicators_testing.py  alternative_apis_data_acquisition.py  backtest_engine.py  binance_historical_acquisition.py  bull_bear_strategy_comparison.py  coingecko_data_acquisition.py  compare_enhancements.py  comprehensive_indicator_research.py  comprehensive_signal_analysis.py  data_acquisition.py  debug_atr_breakout.py  debug_entry_signal.py  debug_risk_condition.py  debug_signal_test.py  debug_strategy_signals.py  debug_volume_reversal.py  deep_validation_top5.py  fetch_data.py  final_strategy_test.py  free_data_sources_test.py  historical_data_acquisition.py  multi_period_strategy_analysis.py  optimize_params.py  phase1a_alternative_strategies.py  phase1b_deep_validation.py  phase1c_final_strategy_selection.py  phase1c_strategy_selection.py  phase2_final_optimization.py  phase2_risk_optimization.py  phase2_risk_optimization_flexible.py  phase2_volume_reversal_validation.py  phase3_system_integration.py  regime_strategy_analysis.py  robust_data_acquisition.py  (+9 more)
research/results/signal_analysis/: signal_analysis_summary.txt
scripts/: __init__.py  check_rsi_frequency.py  diagnose_paths.sh  equity_report.py  historical_performance_analysis.py  install.sh  plot_equity.py  profit_check.sh  reconcile.py  secure_state.py  setup_service.sh  testnet_fills_manager.py  trades_report.py
src/: __init__.py  brokers.py  healthcheck.py  regime_model.py  run_bot.py  runner.py  signal_filter.py  strategy.py
strategies/: __init__.py  aggressive_strategy_backtest.py  backtest_new_strategies.py  comprehensive_strategy_backtest.py  high_frequency_aggressive.py  optimized_momentum_strategy.py  refined_strategy_backtest.py  strategy_enhancement_backtest.py  ultra_aggressive_strategy.py  winning_momentum_strategy.py
tests/: __init__.py  test_docker_publish_workflow.py  test_readme.py
