[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "phemex-momentum-trading-bot"
version = "2.0.0"
description = "Production-ready cryptocurrency momentum trading bot with enterprise security"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Trading Bot Team", email = "support@tradingbot.com"},
]
maintainers = [
    {name = "Trading Bot Team", email = "support@tradingbot.com"},
]
keywords = ["cryptocurrency", "trading", "bot", "momentum", "phemex", "bitcoin", "ethereum"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Office/Business :: Financial :: Accounting",
]
requires-python = ">=3.8"
dependencies = [
    "ccxt>=4.2.99",
    "pandas>=2.0.0",
    "pandas-ta>=0.3.14b0",
    "matplotlib>=3.5.0",
    "cryptography>=41.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "flake8-pyproject>=1.2.0",
    "mypy>=0.800",
    "pre-commit>=2.0",
]
docker = [
    "docker>=5.0",
    "docker-compose>=1.29",
]

[project.scripts]
trading-bot = "src.run_bot:main"
bot-health = "src.healthcheck:main"
bot-report = "scripts.equity_report:main"

[project.urls]
Homepage = "https://github.com/storagebirddrop/tradingbot"
Repository = "https://github.com/storagebirddrop/tradingbot"
Documentation = "https://github.com/storagebirddrop/tradingbot/blob/main/README.md"
"Bug Reports" = "https://github.com/storagebirddrop/tradingbot/issues"

[tool.setuptools]
packages = ["src", "scripts", "strategies"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.txt", "*.yml", "*.yaml"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | archive
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".venv",
    "venv",
    "archive",
]